fix contact wrap

--- a/src/Contact/contact.css
+++ b/src/Contact/contact.css
@@ -95,6 +95,11 @@
     padding-bottom: 20px;
     width: 50%;
     justify-content: center;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;  
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;    
+    word-wrap: break-word; 
 }
 
 .info-container{
